--- a/A Comprehensive Survey on Fog Computing State-of-the-Art and Research Challenges/学习笔记.md
+++ b/A Comprehensive Survey on Fog Computing State-of-the-Art and Research Challenges/学习笔记.md
@@ -18,7 +18,7 @@ typora-copy-images-to: img
 >    - 特定于应用程序的算法
 > 3. 全局篇
 
-![1536894255988](img\1536894255988.png)
+![1536894255988](F:\literature\A Comprehensive Survey on Fog Computing State-of-the-Art and Research Challenges\img\1536894255988.png)
 
 ![1536894793524](F:\literature\A Comprehensive Survey on Fog Computing State-of-the-Art and Research Challenges\img\1536894793524.png)
 
